--- a/src/main/webapp/vistas/notas/paginaNota.xhtml
+++ b/src/main/webapp/vistas/notas/paginaNota.xhtml
@@ -49,7 +49,8 @@
                <p:panel header="Imagenes Entregadas">
                     <p:dataTable id="datalist" value="#{notasController.itemsObject}" var="emIngE"
                                  scrollable="true"
-                                 scrollHeight="90%"
+                                 scrollWidth="80%"
+                                 scrollHeight="80%"
                             >
                         <p:column headerText="Satelite">
                             <h:outputText value="#{emIngE[0]}"/>
