--- a/src/main/webapp/vistas/Reportes/calendarReportes.xhtml
+++ b/src/main/webapp/vistas/Reportes/calendarReportes.xhtml
@@ -9,20 +9,21 @@
         <title>Facelet Title</title>
     </h:head>
     <ui:composition>
-        <p:dialog id="reporteList" widgetVar="reporteListDialog" width="500" height="200"  modal="true" resizable="false" appendTo="@(body)">
-            <h:form id="reporteForm"> 
+        <p:dialog id="calendarLis" widgetVar="calendarDialog" width="500" height="150"  modal="true" resizable="false" appendTo="@(body)">
+            <h:form id="calendarForm"> 
                 <h:panelGroup id="panelReposrteDepe">
                     
                     <p:panel header="Elija la fecha">
                            <p:outputLabel value="Ficha inical:" for="fechaInicial" />
-                           <p:calendar id="fechaInicial" pattern="yyyy-MM-dd" value="#{reportesController.fechainicio}"   showOn="button">
+                           <p:calendar id="fechaInicial" pattern="yyyy-MM-dd" value="#{reportesController.fechainicio}">
                                <p:ajax update="fechaFinal"  event="dateSelect"/>
                            </p:calendar>
                            <p:outputLabel value="Ficha final:" for="fechaFinal" />
-                           <p:calendar id="fechaFinal" pattern="yyyy-MM-dd" value="#{reportesController.fechafinal}"   showOn="button" >
+                           <p:calendar id="fechaFinal" pattern="yyyy-MM-dd" value="#{reportesController.fechafinal}" disabled="#{empty reportesController.fechainicio}" 
+                                       maxdate="#{reportesController.fechalimite}">
                            </p:calendar>
                     </p:panel>
-                    <p:commandButton value="Aceptar" onclick="reporteListDialog.hide()"/>
+                    <p:commandButton value="Aceptar" onclick="calendarDialog.hide()"/>
                 </h:panelGroup>
             </h:form>
         </p:dialog>        
