--- a/src/main/webapp/vistas/Reportes/list.xhtml
+++ b/src/main/webapp/vistas/Reportes/list.xhtml
@@ -3,7 +3,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-      xmlns:p="http://primefaces.org/ui">
+      xmlns:p="http://primefaces.org/ui"
+      xmlns:f="http://xmlns.jcp.org/jsf/core">
     <h:head>
         <title>Facelet Title</title>
     </h:head>
@@ -11,48 +12,54 @@
         <ui:composition template="/template.xhtml">
             <ui:define name="body">
 
-            <p:layout style="min-width:400px;min-height:200px;">
-                <p:layoutUnit position="west" resizable="true" size="200" minSize="40" maxSize="200">
-                 <h:form>
-                        <p:menu toggleable="true">
-                            <p:submenu label="Reporte por periodos">
-                                <p:menuitem value="Dependecia"  icon="ui-icon-disk" action="#{reportesController.opcion}" oncomplete="PF('reporteListDialog').show()"/>
-                                <p:menuitem value="Organismo"   action="#{reportesController.opcion}"  oncomplete="PF('reporteListDialog').show()" icon="ui-icon-arrowrefresh-1-w"/>
-                                <p:menuitem value="Institucion"   action="#{reportesController.opcion}"  oncomplete="PF('reporteListDialog').show()" icon="ui-icon-arrowrefresh-1-w"/>
-                                <p:menuitem value="Gestor"   action="#{reportesController.opcion}" oncomplete="PF('reporteListDialog').show()" icon="ui-icon-arrowrefresh-1-w"/>                               
-                            </p:submenu>
-                            <p:submenu label="Consulta">
-                                <p:menuitem value="Dependecia"  icon="ui-icon-disk" />
-                                <p:menuitem value="Organismo"   icon="ui-icon-arrowrefresh-1-w"/>
-                                <p:menuitem value="Institucion"   icon="ui-icon-arrowrefresh-1-w"/>
-                                <p:menuitem value="Gestor"   icon="ui-icon-arrowrefresh-1-w"/>                               
-                            </p:submenu>
-                        </p:menu>
-                    </h:form>
-                </p:layoutUnit>
- 
-            <p:layoutUnit position="center">
-           <h:form id="reporteForm1"> 
-                <h:panelGroup id="panelReposrteDepe">
-                    <p:dataTable id="datalist" var="emIngE" value="#{reportesController.resultadoContoller}"
-                                     scrollable="true"
-                                     scrollWidth="100%"
-                                     scrollHeight="100%"
-                                     >
-                            <p:column headerText="Satelite">
-                                <h:outputText value="#{emIngE[0]}"/>
-                            </p:column>
-                            <p:column headerText="KJ">
-                                <h:outputText value="#{emIngE[1]}"/>
-                            </p:column>
-                        </p:dataTable>
-                </h:panelGroup>
-            </h:form>
-            </p:layoutUnit>
-           </p:layout>
-                 <ui:include src="reporteDependencia.xhtml"/>
+                <p:layout style="min-width:400px;min-height:200px;">
+                    <p:layoutUnit position="west" resizable="true" size="350" minSize="350" maxSize="350">
+                        <h:form>
+                            <p:panelGrid columns="1" layout="grid">
+                                <f:facet name="header">
+                                    <h:outputText value="Reporte por Periodos"/>
+                                </f:facet>
+                                <p:selectOneRadio value="#{reportesController.opcion}">
+                                    <f:selectItem itemLabel="Dependencia" itemValue="1" />
+                                    <p:spinner/>
+                                    <f:selectItem itemLabel="Organismo" itemValue="2" />
+                                    <p:spinner/>
+                                    <f:selectItem itemLabel="Institucion" itemValue="3" />
+                                    <p:ajax oncomplete="PF('calendarDialog').show()"/>
+                                </p:selectOneRadio>
+                            </p:panelGrid>
+                        </h:form>
+
+                    </p:layoutUnit>
+
+                    <p:layoutUnit position="center">
+                        <h:form id="reporteForm1"> 
+                            <h:panelGroup id="panelReposrteDepe">
+                                <p:dataTable id="datalist" var="emIngE" value="#{reportesController.resultadoContoller}"
+                                             scrollable="true"
+                                             scrollWidth="100%"
+                                             scrollHeight="100%"
+                                             >
+                                    <p:column>
+                                        <f:facet name="header">
+                                            <h:outputText value="#{reportesController.encabezadoTabla}"/>
+                                        </f:facet>                                            
+                                        <h:outputText value="#{emIngE[0]}"/>
+                                    </p:column>
+                                    <p:column>
+                                        <f:facet name="header">
+                                            <h:outputText value="No. de imagens"/>
+                                        </f:facet>
+                                        <h:outputText value="#{emIngE[1]}"/>
+                                    </p:column>
+                                </p:dataTable>
+                            </h:panelGroup>
+                        </h:form>
+                    </p:layoutUnit>
+                </p:layout>
+                <ui:include src="calendarReportes.xhtml"/>
             </ui:define>
-           
+
         </ui:composition>
     </h:body>
 </html>
