--- a/src/main/webapp/vistas/solicitudesInternet/List.xhtml
+++ b/src/main/webapp/vistas/solicitudesInternet/List.xhtml
@@ -87,8 +87,8 @@
                             <h:outputText value="#{item.nivel}"/>
                         </p:column>
                         <f:facet name="footer">
-                                
-                            <p:commandButton id="createButtonSolicitud" icon="ui-icon-plus"   value="Estilo 1" actionListener="#{solicitudesInternetController.prepareCreate}" update=":SolicitudesInternetCreateForm" oncomplete="PF('SolicitudesInternetCreate').show()"/>
+                            <p:commandButton id="createButtonSolicitud" icon="ui-icon-plus"   value="Create" actionListener="#{solicitudesInternetController.prepareCreate}" update=":SolicitudesInternetCreateForm" oncomplete="PF('SolicitudesInternetCreate').show()"/>
+                            <p:commandButton id="createButtonSolicitudTxt" icon="ui-icon-plus"   value="Create(txt)"  oncomplete="PF('createSolTxtDialog').show()" />
                             <p:commandButton id="viewButton"   icon="ui-icon-search" value="#{bundle.View}" update=":SolicitudesInternetViewForm" oncomplete="PF('SolicitudesInternetViewDialog').show()" disabled="#{empty solicitudesInternetController.selected}"/>
                             <p:commandButton id="editButton"   icon="ui-icon-pencil" value="#{bundle.Edit}" update=":SolicitudesInternetEditForm" oncomplete="PF('SolicitudesInternetEditDialog').show()" disabled="#{empty solicitudesInternetController.selected}" 
                                              action="#{solicitudesInternetController.iniciarValores()}"/>
@@ -99,7 +99,8 @@
             </h:form>
             <ui:include src="Create.xhtml"/>
             <ui:include src="Edit.xhtml"/>
-            <ui:include src="View.xhtml"/>                       
+            <ui:include src="View.xhtml"/>    
+            <ui:include src="createSolicitudTXT.xhtml"/>
             </ui:define>
         <ui:define name="footer">
             
