--- a/src/main/webapp/template.xhtml
+++ b/src/main/webapp/template.xhtml
@@ -37,6 +37,8 @@
                             <p:menuitem value="Instituciones" outcome="/vistas/instituciones/List.xhtml" />
                             <p:menuitem value="Personas" outcome="/vistas/personas/List.xhtml" />
                             <p:menuitem value="Gestores" outcome="/vistas/gestores/List.xhtml" />
+                            <p:menuitem value="Ratificacion" outcome="/vistas/ratificaciones/List.xhtml" />
+                            <p:menuitem value="Proceso Ratificacion" outcome="/vistas/procesoratificacion/List.xhtml" />
                             <p:menuitem value="Solicitudes Internt" outcome="/vistas/solicitudesInternet/List.xhtml" />
                             <p:menuitem value="Control Solicitudes" outcome="/vistas/controlsolicitudes/List.xhtml" />
                             <p:menuitem value="Usuarios" outcome="/vistas/personalatencionusuarios/List.xhtml" />
