--- a/src/main/webapp/vistas/gestores/List.xhtml
+++ b/src/main/webapp/vistas/gestores/List.xhtml
@@ -19,31 +19,29 @@
                         <p:menuitem value="#{bundle.View}" icon="ui-icon-search" update=":GestoresViewForm" oncomplete="PF('GestoresViewDialog').show()"/>
                         <p:menuitem value="#{bundle.Edit}" icon="ui-icon-pencil" update=":GestoresEditForm" oncomplete="PF('GestoresEditDialog').show()"/>
                     </p:contextMenu>
-                    <p:dataTable widgetVar="datalist" id="datalist" value="#{gestoresController.items}" var="item"
+                    <p:dataTable  widgetVar="datalist" id="datalist" value="#{gestoresController.items}" var="item"
                                  selectionMode="single" selection="#{gestoresController.selected}"
                                  paginator="true"
                                  rowKey="#{item.gestor}"
                                  rows="10"
                                  rowsPerPageTemplate="10,20,30,40,50"                               
-                                 resizableColumns="true"
-                                  
+                                 resizableColumns="true"                              
                                  >
-                        <p:ajax event="rowSelect"   update="createButton viewButton editButton"/>
-                        <p:ajax event="rowUnselect" update="createButton viewButton editButton"/>
                         <f:facet name="header">
-                            <p:commandButton id="toggler" type="button" value="Columns" style="float:right" icon="ui-icon-calculator" />
-                            <p:columnToggler datasource="datalist" trigger="toggler" />
+                            <p:commandButton id="createButton" icon="ui-icon-plus"   value="#{bundle.Create}" actionListener="#{gestoresController.prepareCreate}" update=":GestoresCreateForm" oncomplete="PF('GestoresCreateDialog').show()" style="float:left"/>                           
                             <p:commandButton update="datalist" value="Update" style="float:right" icon="ui-icon-refresh" oncomplete="PF('datalist').clearFilters()"/>
                         </f:facet>
-                        <p:column headerText="#{bundle.ListGestoresTitle_gestor}" filterBy="#{item.gestor}" filterMatchMode="contains">       
+                        <p:column headerText="#{bundle.ListGestoresTitle_gestor}" width="8%" filterBy="#{item.gestor}" filterMatchMode="contains">       
                             <h:outputText value="#{item.gestor}"/>
                         </p:column>                       
-                        <p:column headerText="#{bundle.ListGestoresTitle_status}" filterBy="#{item.status}" filterMatchMode="contains" >                                
+                        <p:column headerText="#{bundle.ListGestoresTitle_status}"  width="10%" filterBy="#{item.status}" filterMatchMode="contains" >                                
                             <f:facet name="filter">
                                 <p:selectOneButton onchange="PF('datalist').filter()">
                                     <f:selectItem itemLabel="T"  itemValue="" />
                                     <f:selectItem itemLabel="A" itemValue="activo"  />
-                                    <f:selectItem itemLabel="B" itemValue="baja" />    
+                                    <f:selectItem itemLabel="B" itemValue="baja" /> 
+                                    <f:selectItem itemLabel="R"  itemValue="ratificacion" />
+                                    <f:selectItem itemLabel="P"  itemValue="pendiente" />
                                 </p:selectOneButton>                             
                             </f:facet>
                             <h:outputText value="#{item.status}"/>
@@ -59,11 +57,6 @@
                             <p:commandButton icon="ui-icon-pencil" action="#{personasController.prepare1(item.designador)}" update=":PersonasEditarForm" oncomplete="PF('PersonasEditarDialog').show()"/>    
                             <h:outputText value=" #{item.designador.grado} #{item.designador.nombre} #{item.designador.apellidop} #{item.designador.apellidom} "/>
                         </p:column>            
-                        <f:facet name="footer">
-                            <p:commandButton id="createButton" icon="ui-icon-plus"   value="#{bundle.Create}" actionListener="#{gestoresController.prepareCreate}" update=":GestoresCreateForm" oncomplete="PF('GestoresCreateDialog').show()"/>
-                            <p:commandButton id="viewButton"   icon="ui-icon-search" value="#{bundle.View}" update=":GestoresViewForm" oncomplete="PF('GestoresViewDialog').show()" disabled="#{empty gestoresController.selected}"/>
-                            <p:commandButton id="editButton"   icon="ui-icon-pencil" value="#{bundle.Edit}" update=":GestoresEditForm" oncomplete="PF('GestoresEditDialog').show()" disabled="#{empty gestoresController.selected}"/>
-                        </f:facet>
                     </p:dataTable>                   
                 </p:panel>
             </h:form>
